--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ datasets==2.15.0
 transformers==4.36.1
 --extra-index-url https://download.pytorch.org/whl/cu116
 torch==1.12.1+cu116
+tensorboard==2.15.1
