--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ transformers==4.36.1
 --extra-index-url https://download.pytorch.org/whl/cu116
 torch==1.12.1+cu116
 tensorboard==2.15.1
+wordcloud==1.9.3
